--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The root of human suffering and what true forgiveness reveals</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">19 minutes ago</div>
+                        <div class="date">34 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Can You Guess The Link?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">28 minutes ago</div>
+                        <div class="date">43 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Fly high puffle 🕊️</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Some unique intimidation tactics here ￼</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Hope they didn’t see that</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>I bought all of it</h3>
                         <div class="channel">ItalianBach</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>The root of human suffering and what true forgiveness reveals</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">19 minutes ago</div>
+                            <div class="date">34 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Can You Guess The Link?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">28 minutes ago</div>
+                            <div class="date">43 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Fly high puffle 🕊️</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>Some unique intimidation tactics here ￼</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10272,7 +10272,7 @@
                         <div class="video-info">
                             <h3>Hope they didn’t see that</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10283,7 +10283,7 @@
                         <div class="video-info">
                             <h3>I bought all of it</h3>
                             <div class="channel">ItalianBach</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
