--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>The root of human suffering and what true forgiveness reveals</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Death – A Fiction of the Ignorant |Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN AMONG US BUT THE IMPOSTORS ROLE UPGRADES WITH EVERY KILL</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -970,7 +970,7 @@
                     <div class="video-info">
                         <h3>How many things could fit inside you?</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -981,7 +981,7 @@
                     <div class="video-info">
                         <h3>The New Downswing - You'll Never Worry About Your Hips Ever Again!</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">5 days ago</div>
+                        <div class="date">6 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Performance Update - Strategies in "11 AI Inspired Algo Trading Strategies" Book</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>The root of human suffering and what true forgiveness reveals</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Death – A Fiction of the Ignorant |Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>My Multi seeds Panini with   Sourdough Pizza Dough</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10057,7 +10057,7 @@
                         <div class="video-info">
                             <h3>The New Downswing - You'll Never Worry About Your Hips Ever Again!</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN AMONG US BUT THE IMPOSTORS ROLE UPGRADES WITH EVERY KILL</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10459,7 +10459,7 @@
                         <div class="video-info">
                             <h3>How many things could fit inside you?</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">5 days ago</div>
+                            <div class="date">6 days ago</div>
                         </div>
                     </a>
                 </div>
