--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>He forced me to Put pineapple on pizza!</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">4 minutes ago</div>
+                        <div class="date">17 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1153,9 +1153,9 @@
         
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=R9VNqnHtYow" target="_blank">
-                    <img src="https://i.ytimg.com/vi/R9VNqnHtYow/mqdefault.jpg" alt="SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE">
+                    <img src="https://i.ytimg.com/vi/R9VNqnHtYow/mqdefault.jpg" alt="SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE">
                     <div class="video-info">
-                        <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
+                        <h3>SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE</h3>
                         <div class="channel">MoreSidemen</div>
                         <div class="date">1 week ago</div>
                     </div>
@@ -1751,7 +1751,7 @@
                     <div class="video-info">
                         <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -1762,7 +1762,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>How to Build a Seasonal Edge in StrategyQuantX 🔧 (Gold Example 💡)</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6192,7 +6192,7 @@
                         <div class="video-info">
                             <h3>*LIVE* Passing the5ers 100K Evaluation with my Range Breakout EA</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -6203,7 +6203,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>He forced me to Put pineapple on pizza!</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">4 minutes ago</div>
+                            <div class="date">17 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -10521,9 +10521,9 @@
             
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=R9VNqnHtYow" target="_blank">
-                        <img src="https://i.ytimg.com/vi/R9VNqnHtYow/mqdefault.jpg" alt="SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE">
+                        <img src="https://i.ytimg.com/vi/R9VNqnHtYow/mqdefault.jpg" alt="SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE">
                         <div class="video-info">
-                            <h3>SIDEMEN AMONG US HALLOWEEN SPECIAL: DEAD PLAYERS STILL LOOK ALIVE</h3>
+                            <h3>SIDEMEN AMONG US BUT DEAD PLAYERS STILL LOOK ALIVE</h3>
                             <div class="channel">MoreSidemen</div>
                             <div class="date">1 week ago</div>
                         </div>
